--- a/index.html
+++ b/index.html
@@ -285,13 +285,20 @@
           subscribe to our
           <span class="newsletter-title__strong">Newsletter</span>
         </h2>
-        <form action="#" method="post" class="subscribe newsletter__subscribe">
-          <input
-            type="text"
-            class="subscribe__input"
-            placeholder="Your email address"
-            name="email"
-          />
+        <form
+          action="#"
+          method="post"
+          class="subscribe newsletter__subscribe form"
+        >
+          <div class="subscribe__input-out">
+            <input
+              type="text"
+              class="subscribe__input"
+              placeholder="Your email address"
+              name="email"
+              required
+            />
+          </div>
           <button class="subscribe__button" type="submit">Send</button>
         </form>
       </div>
@@ -561,19 +568,27 @@
           </div>
           <div class="footer__contact-form">
             <h3 class="footer__title footer__title--mb-3">Send us a message</h3>
-            <form action="send.php" method="post" class="footer__form">
-              <input
-                type="text"
-                class="input footer__input"
-                placeholder="Your Full Name"
-                name="name"
-              />
-              <input
-                type="text"
-                class="input footer__input"
-                placeholder="Phone Number"
-                name="phone"
-              />
+            <form action="send.php" method="post" class="footer__form form">
+              <div class="footer__input-group">
+                <input
+                  type="text"
+                  class="input footer__input"
+                  placeholder="Your Full Name"
+                  name="name"
+                  required
+                  minlength="2"
+                />
+              </div>
+              <div class="footer__input-group">
+                <input
+                  type="phone_mask"
+                  class="input footer__input modal__musk"
+                  placeholder="Phone Number"
+                  name="phone"
+                  required
+                />
+              </div>
+
               <textarea
                 class="message footer__message"
                 placeholder="Message"
@@ -608,31 +623,35 @@
         </div>
       </div>
     </footer>
-    <div class="modal">
+    <div class="modal" id="booking-modal">
       <div class="modal__overlay"></div>
       <div class="modal__dialog">
         <a href="#" class="modal__close"
           ><img src="img/close.svg" alt="icon: close"
         /></a>
         <h3 class="modal__title modal__title--mb-3">Send us a message</h3>
-        <form action="send.php" method="post" class="modal__form">
+        <form action="send.php" method="post" class="modal__form form">
           <input
             type="text"
             class="input modal__input"
-            placeholder="Your Full Name"
+            placeholder="Your Full Name*"
             name="name"
+            required
+            minlength="2"
           />
           <input
-            type="text"
-            class="input modal__input"
-            placeholder="Phone Number"
+            type="phone_mask"
+            class="input modal__input modal__musk"
+            placeholder="Phone Number*"
             name="phone"
+            required
           />
           <input
             type="text"
             class="input modal__input"
             placeholder="Email*"
             name="email"
+            required
           />
           <textarea
             class="message modal__message"
@@ -646,6 +665,8 @@
     </div>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.mask.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
