--- a/index.html
+++ b/index.html
@@ -568,21 +568,18 @@
                     src="img/phone-call.svg"
                     alt="icon: phone"
                   />
+                </div>
 
-                  <div class="tel__link">
-                    <span>Tel (business hours) : </span>
-                    <a class="footer__link" href="tel:2691500">269 1500</a>
-                    <br />
-                  </div>
+                <div class="tel__link">
+                  <span>Tel (business hours) 1: </span>
+                  <a class="footer__link" href="tel:2691500">269 1500</a> <br />
 
-                  <div class="tel__link">
-                    <span>Tel (hotline) Monday - Saturday:</span>
-                    <a class="footer__link" href="tel:52566138">52-56-61-38</a>
-                    <span> (08:00 am – 20:00 pm)</span> <br />
-                    <span>Tel (hotline) Sunday: </span>
-                    <a class="footer__link" href="tel:52566138">52-56-61-38</a>
-                    <span> (08:00 am – 14:00 pm)</span>
-                  </div>
+                  <span>Tel (hotline) Monday - Saturday:</span>
+                  <a class="footer__link" href="tel:52566138">52-56-61-38</a>
+                  <span> (08:00 am – 20:00 pm)</span> <br />
+                  <span>Tel (hotline) Sunday: </span>
+                  <a class="footer__link" href="tel:52566138">52-56-61-38</a>
+                  <span> (08:00 am – 14:00 pm)</span>
                 </div>
               </li>
               <li class="footer__item footer__item--mb-2">
