--- a/thankyou.html
+++ b/thankyou.html
@@ -116,17 +116,16 @@
         </div>
       </div>
     </section>
-
     <footer class="footer">
       <div class="container">
         <div class="footer-wrapper">
-          <a href="index.html" class="footer__logo">
-            <img
+          <a href="index.html" class="footer__logo"
+            ><img
               src="img/vertical-logo.svg"
               alt="Logo:BestTourPlan"
               class="logo footer__logo"
-            />
-          </a>
+          /></a>
+
           <div class="footer__list footer__categories">
             <h3 class="footer__title">ALL CATEGORIES</h3>
             <ul class="footer__ul">
@@ -184,13 +183,22 @@
           <div class="footer__social-network">
             <h3 class="footer__title footer__title--inline">Social Network</h3>
             <div class="footer__social-links">
-              <a href="#" class="footer__link"
+              <a
+                href="https://facebook.com/"
+                class="footer__link"
+                target="_blank"
                 ><img src="img/fb.svg" alt="icon:FB"
               /></a>
-              <a href="#" class="footer__link"
+              <a
+                href="https://www.youtube.com/"
+                class="footer__link"
+                target="_blank"
                 ><img src="img/yt.svg" alt="icon:Yuotube"
               /></a>
-              <a href="#" class="footer__link"
+              <a
+                href="https://www.instagram.com/"
+                class="footer__link"
+                target="_blank"
                 ><img src="img/inst.svg" alt="icon:Inst"
               /></a>
             </div>
@@ -238,10 +246,18 @@
                     alt="icon: phone"
                   />
                 </div>
-                Tel (business hours) : 269 1500 <br />
-                Tel (hotline) Monday - Saturday:52-56-61-38 (08:00 am – 20:00
-                pm) <br />
-                Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00 pm)
+
+                <div class="tel__link">
+                  <span>Tel (business hours) 1: </span>
+                  <a class="footer__link" href="tel:2691500">269 1500</a> <br />
+
+                  <span>Tel (hotline) Monday - Saturday:</span>
+                  <a class="footer__link" href="tel:52566138">52-56-61-38</a>
+                  <span> (08:00 am – 20:00 pm)</span> <br />
+                  <span>Tel (hotline) Sunday: </span>
+                  <a class="footer__link" href="tel:52566138">52-56-61-38</a>
+                  <span> (08:00 am – 14:00 pm)</span>
+                </div>
               </li>
               <li class="footer__item footer__item--mb-2">
                 <div class="footer__icon-wrapper">
@@ -251,27 +267,39 @@
                     alt="icon: email"
                   />
                 </div>
-                cherly.lawson@example.com
+                <a class="footer__link" href="mailto:cherly.lawson@example.com"
+                  >cherly.lawson@example.com</a
+                >
               </li>
             </ul>
           </div>
+
           <div class="footer__contact-form">
             <h3 class="footer__title footer__title--mb-3">Send us a message</h3>
-            <form action="send.php" method="post" class="footer__form">
-              <input
-                type="text"
-                class="input footer__input"
-                placeholder="Your Full Name"
-                name="name"
-              />
-              <input
-                type="text"
-                class="input footer__input"
-                placeholder="Phone Number"
-                name="phone"
-              />
+            <form action="send.php" method="post" class="footer__form form">
+              <div id="input-name" class="footer__input-group">
+                <input
+                  type="text"
+                  class="input footer__input"
+                  placeholder="Your Full Name"
+                  name="name"
+                  required
+                  minlength="2"
+                />
+              </div>
+              <div class="footer__input-group" id="input-tel">
+                <input
+                  type="tel"
+                  class="footer-tel input footer__input"
+                  placeholder="Phone Number"
+                  name="phone"
+                  required
+                  minlength="16"
+                />
+              </div>
+
               <textarea
-                class="footer__message"
+                class="message footer__message"
                 placeholder="Message"
                 name="message"
               ></textarea>
@@ -279,15 +307,32 @@
               <span class="footer__info">* Required Fields</span>
             </form>
           </div>
-        </div>
-        <div class="footer-bottom">
-          <span class="footer-bottom__text"
-            >Disclaimer Conditions of use Cancellation policy</span
-          >
-          <img src="img/bottom-img.png" alt="" class="footer-bottom__img" />
+          <div class="footer__bottom-wrap">
+            <div class="footer__bottom-blank"></div>
+
+            <div class="footer__bottom-text">
+              <ul class="footer__bottom-list">
+                <li>
+                  <a href="#" class="footer__bottom-link">Disclaimer</a>
+                </li>
+                <li>
+                  <a href="#" class="footer__bottom-link">Conditions of use</a>
+                </li>
+                <li>
+                  <a href="#" class="footer__bottom-link"
+                    >Cancellation policy</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="footer__bottom-img">
+              <img src="img/bottom-img.png" alt="" class="footer__img5" />
+            </div>
+          </div>
         </div>
       </div>
     </footer>
+
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
